NEWSTART-256 fix WeatherTile text overflow

--- a/app/assets/css/utilities.less
+++ b/app/assets/css/utilities.less
@@ -16,3 +16,8 @@
 .cursor-pointer {
   cursor: pointer;
 }
+
+.table-cell {
+  display: table-cell;
+  vertical-align: text-top;
+}
